--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,9 @@
 </head>
 <body>  
     {% include 'header.html' %} 
-    <section id="main_section">
-    <article>
-        <a href = "/projects/add"> Add Project </a>
-    </article>
-    <article>
-        <a href = "/employees/add"> Add Employee </a>
-    </article>
-    <article>
-        <a href = "/employees"> Show Employees </a>
-    </article>
-    <article>
-        <a href = "/projects"> show projects</a>
-    </article>
-    <article>
-        <a href = "/employees/set"> set employee to project</a>
-    </article>
+    <section style="display: flex;" id="main_section">
+        <img src="https://i.ibb.co/BrcxSGZ/building-machine-1422769.jpg" alt="building-machine-1422769" >
+        <img src="https://i.ibb.co/F3R5LNC/storm-over-boise-1225455.jpg" alt="storm-over-boise-1225455" >
     </section>
     {% include 'footer.html' %}
 </body>
