--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>  
     {% include 'header.html' %} 
-    <section style="display: flex;" id="main_section">
-        <img src="https://i.ibb.co/BrcxSGZ/building-machine-1422769.jpg" alt="building-machine-1422769" >
-        <img src="https://i.ibb.co/F3R5LNC/storm-over-boise-1225455.jpg" alt="storm-over-boise-1225455" >
+    <section id="main_section">
+        
     </section>
     {% include 'footer.html' %}
 </body>
