--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,1 +1,16 @@
 
+body{
+    background-image: url("/images/back_ground.jpg");
+    background-repeat: no-repeat;
+}
+
+img{
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section{
+    display: flex;
+}
+
