--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -21,8 +21,7 @@
                 <!-- <label> Contractor Id: </label> -->
                 <input class="form__field" placeholder="Contractor Id" type="tel" id="constractor_id" name="constractor_id" required><br><br>
 
-                <textarea class="form__field" placeholder="Notes" id="project_notes" name="project_notes" rows="4" cols="50">
-                </textarea><br><br>
+                <textarea class="form__field" placeholder="Notes" id="project_notes" name="project_notes" rows="4" cols="50"></textarea>
 
                 <!-- <label> Start Date: </label> -->
                 <input class="form__field" placeholder="Start Date" type="date" id="start_date" name="start_date" required><br><br>
